--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,24 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+def android_support_version = '27.1.1'
+def constraint_layout_version = '1.1.0'
+def test_runner_version = '1.0.2'
+def test_espresso_version = '3.0.2'
+def junit_version = '4.12'
+def lottie_version = '2.5.1'
+def picasso_version = '2.71828'
+def rxjava_version = '2.0.2'
+def rxandroid_version = '2.0.2'
+def retrofit_version = '2.4.0'
+def retrofit_scalars_converter = '2.1.0'
+def placeholder_view_version = '0.7.2'
+def anko_version = '0.9'
+def barcode_scanner_version = '1.9'
+def qr_generator_version = '2.4.0'
+def circular_progress_view_version = '2.5.0'
+def glide_version = '4.6.1'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -24,10 +42,56 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$android_support_version"
+    implementation "com.android.support:support-v4:$android_support_version"
+    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+
+    //Design Library
+    implementation "com.android.support:design:$android_support_version"
+
+    //CardView
+    implementation "com.android.support:cardview-v7:$android_support_version"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:$lottie_version"
+
+    //Facebook
+    implementation "com.facebook.android:facebook-android-sdk:4.0.0"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    //Picasso
+    implementation "com.squareup.picasso:picasso:$picasso_version"
+
+    //PlaceHolder View
+    implementation "com.mindorks:placeholderview:$placeholder_view_version"
+
+    //RxJava & RxAndroid Libraries
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+
+    //Retrofit Library
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_scalars_converter"
+
+    //Anko
+    implementation "org.jetbrains.anko:anko-common:$anko_version"
+
+    //Barcode Scanner
+    implementation "me.dm7.barcodescanner:zxing:$barcode_scanner_version"
+
+    //QRGen
+    implementation "com.github.kenglxn.QRGen:android:$qr_generator_version"
+
+    //Circular Progress Bar
+    implementation "com.github.rahatarmanahmed:circularprogressview:$circular_progress_view_version"
+
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "com.android.support.test:runner:$test_runner_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$test_espresso_version"
 }
