--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:exifinterface:27.1.1'
+    implementation 'com.android.support:animated-vector-drawable:27.1.1'
+    implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     //Design Library
@@ -41,10 +43,11 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.5.1'
 
     //Facebook
-    implementation 'com.facebook.android:facebook-android-sdk:4.0.0'
+    implementation 'com.facebook.android:facebook-login:4.34.0'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
     //Picasso
