Implementación Facebook Login, Acceso a la información pública del perfil de Facebook, Creación de cuenta local utilizando arquitectura Clean.

--- a/login/src/main/AndroidManifest.xml
+++ b/login/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.babynames.login" >
+    package="com.babynames.login">
 
     <uses-permission
         android:name="android.permission.AUTHENTICATE_ACCOUNTS"
@@ -7,4 +7,18 @@
     <uses-permission
         android:name="android.permission.GET_ACCOUNTS"
         android:maxSdkVersion="22" />
+
+    <application>
+        <service
+            android:name=".presentation.account.AuthenticatorService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator_meta_data" />
+        </service>
+    </application>
 </manifest>
