--- a/core/build.gradle
+++ b/core/build.gradle
@@ -89,6 +89,9 @@ dependencies {
     //Room
     kapt 'android.arch.persistence.room:compiler:1.1.1'
 
+    //Dagger
+    kapt 'com.google.dagger:dagger-compiler:2.15'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
