--- a/login/build.gradle
+++ b/login/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 
     //Room
     kapt 'android.arch.persistence.room:compiler:1.1.1'
+
+    //Dagger
+    kapt 'com.google.dagger:dagger-compiler:2.15'
 }
 repositories {
     mavenCentral()
