--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':core', ':login', ':database', ':names', ':profile'
+include ':app', ':core', ':login', ':database', ':names', ':profile', ':gender'
