--- a/profile/build.gradle
+++ b/profile/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation project(":gender")
 
     //Dagger
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt 'com.google.dagger:dagger-compiler:2.15'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
