--- a/profile/src/main/AndroidManifest.xml
+++ b/profile/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application>
         <activity android:name=".presentation.activities.AboutActivity" />
+        <activity android:name=".presentation.activities.ScanQRActivity" />
     </application>
 
 </manifest>
