--- a/core/build.gradle
+++ b/core/build.gradle
@@ -74,9 +74,6 @@ dependencies {
     api "org.jetbrains.anko:anko:$anko_version"
     api "org.jetbrains.anko:anko-design:$anko_version"
 
-    //Barcode Scanner
-    api 'me.dm7.barcodescanner:zxing:1.9'
-
     //QRGen
     api 'com.github.kenglxn.QRGen:android:2.4.0'
 
@@ -91,6 +88,9 @@ dependencies {
 
     //Kotlin Commons
     api 'com.github.knockmark10:KotlinCommons:2.0.4'
+
+    //QR Scanner
+    api 'com.budiyev.android:code-scanner:1.9.4'
 
     //Room
     kapt 'android.arch.persistence.room:compiler:1.1.1'
