Profile Section(gen qr, show profile info), Scan service in process

--- a/profile/src/main/AndroidManifest.xml
+++ b/profile/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity android:name=".presentation.activities.AboutActivity" />
         <activity android:name=".presentation.activities.ScanQRActivity" />
+        <activity android:name=".presentation.activities.MyCodeActivity"></activity>
     </application>
 
 </manifest>
